Notebook: matplotlib yoksa atlama mesajları kaldırıldı; plotting hücreleri try/except olmadan çalışacak

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -46,27 +46,25 @@
         "import os\n",
         "\n",
         "# Matplotlib kontrol/kurulum (gerekirse)\n",
-        "try:\n",
-        "    import matplotlib  # noqa: F401\n",
-        "    import matplotlib.pyplot as plt  # noqa: F401\n",
-        "    print('matplotlib hazır')\n",
-        "except ModuleNotFoundError:\n",
-        "    import subprocess\n",
-        "    print('matplotlib eksik; kuruluyor...')\n",
-        "    subprocess.check_call([sys.executable, '-m', 'pip', 'install', 'matplotlib'])\n",
-        "    import matplotlib  # noqa: F401\n",
-        "    import matplotlib.pyplot as plt  # noqa: F401\n",
-        "    print('kurulum tamam')\n",
+        "import matplotlib  # noqa: F401\n",
+        "import matplotlib.pyplot as plt  # noqa: F401\n",
+        "print('matplotlib hazır')\n",
+        "import subprocess\n",
+        "print('matplotlib eksik; kuruluyor...')\n",
+        "subprocess.check_call([sys.executable, '-m', 'pip', 'install', 'matplotlib'])\n",
+        "import matplotlib  # noqa: F401\n",
+        "import matplotlib.pyplot as plt  # noqa: F401\n",
+        "print('kurulum tamam')\n",
         "\n",
         "import networkx as nx\n",
         "from analysis_helpers import (\n",
-        "    fetch_top_packages,\n",
-        "    build_dependency_graph,\n",
-        "    compute_metrics,\n",
-        "    save_edges,\n",
-        "    save_metrics,\n",
-        "    save_report,\n",
-        "    read_list,\n",
+        "fetch_top_packages,\n",
+        "build_dependency_graph,\n",
+        "compute_metrics,\n",
+        "save_edges,\n",
+        "save_metrics,\n",
+        "save_report,\n",
+        "read_list,\n",
         ")\n",
         "\n",
         "TOP_N = 1000  # Top N paket (varsayılan)\n",
@@ -416,24 +414,21 @@
       ],
       "source": [
         "import math\n",
-        "try:\n",
-        "    import matplotlib.pyplot as plt\n",
-        "    N = G.number_of_nodes()\n",
-        "    pos = nx.spring_layout(G, k=1/math.sqrt(max(N,1)), seed=42)\n",
-        "    max_in = max(in_deg.values()) if in_deg else 1\n",
-        "    node_sizes = [100 + (400 * (in_deg.get(n,0) / max_in if max_in else 0)) for n in G.nodes()]\n",
-        "    node_colors = ['tab:orange' if n in top_set else 'tab:blue' for n in G.nodes()]\n",
-        "    plt.figure(figsize=(12, 9), dpi=150)\n",
-        "    nx.draw_networkx_edges(G, pos, arrows=False, width=0.5, alpha=0.25)\n",
-        "    nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors='#444444')\n",
-        "    plt.title('NPM Top N Bağımlılık Ağı (Tümü)')\n",
-        "    plt.axis('off')\n",
-        "    out_png = OUTDIR / 'network_full_topN.png'\n",
-        "    out_svg = OUTDIR / 'network_full_topN.svg'\n",
-        "    plt.tight_layout(); plt.savefig(out_png); plt.savefig(out_svg)\n",
-        "    (out_png, out_svg)\n",
-        "except ModuleNotFoundError:\n",
-        "    print('matplotlib bulunamadı; görselleştirme atlandı.')\n"
+        "import matplotlib.pyplot as plt\n",
+        "N = G.number_of_nodes()\n",
+        "pos = nx.spring_layout(G, k=1/math.sqrt(max(N,1)), seed=42)\n",
+        "max_in = max(in_deg.values()) if in_deg else 1\n",
+        "node_sizes = [100 + (400 * (in_deg.get(n,0) / max_in if max_in else 0)) for n in G.nodes()]\n",
+        "node_colors = ['tab:orange' if n in top_set else 'tab:blue' for n in G.nodes()]\n",
+        "plt.figure(figsize=(12, 9), dpi=150)\n",
+        "nx.draw_networkx_edges(G, pos, arrows=False, width=0.5, alpha=0.25)\n",
+        "nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors='#444444')\n",
+        "plt.title('NPM Top N Bağımlılık Ağı (Tümü)')\n",
+        "plt.axis('off')\n",
+        "out_png = OUTDIR / 'network_full_topN.png'\n",
+        "out_svg = OUTDIR / 'network_full_topN.svg'\n",
+        "plt.tight_layout(); plt.savefig(out_png); plt.savefig(out_svg)\n",
+        "(out_png, out_svg)\n"
       ]
     },
     {
@@ -461,27 +456,24 @@
         }
       ],
       "source": [
-        "try:\n",
-        "    H = G.subgraph(top_set).copy()\n",
-        "    HN = H.number_of_nodes() or 1\n",
-        "    posH = nx.spring_layout(H, k=1/math.sqrt(HN), seed=42)\n",
-        "    max_in_H = max((in_deg.get(n,0) for n in H.nodes()), default=1)\n",
-        "    node_sizes_H = [120 + (480 * (in_deg.get(n,0) / max_in_H if max_in_H else 0)) for n in H.nodes()]\n",
-        "    node_colors_H = ['tab:orange' for _ in H.nodes()]\n",
-        "    import matplotlib.pyplot as plt\n",
-        "    plt.figure(figsize=(10, 8), dpi=150)\n",
-        "    nx.draw_networkx_edges(H, posH, arrows=False, width=0.6, alpha=0.35)\n",
-        "    nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors='#444444')\n",
-        "    if H.number_of_nodes() <= 60:\n",
-        "        nx.draw_networkx_labels(H, posH, font_size=6)\n",
-        "    plt.title('NPM Top N Bağımlılık Ağı (Sadece Top N)')\n",
-        "    plt.axis('off')\n",
-        "    out_png2 = OUTDIR / 'network_topN_only.png'\n",
-        "    out_svg2 = OUTDIR / 'network_topN_only.svg'\n",
-        "    plt.tight_layout(); plt.savefig(out_png2); plt.savefig(out_svg2)\n",
-        "    (out_png2, out_svg2)\n",
-        "except ModuleNotFoundError:\n",
-        "    print('matplotlib bulunamadı; görselleştirme atlandı.')\n"
+        "H = G.subgraph(top_set).copy()\n",
+        "HN = H.number_of_nodes() or 1\n",
+        "posH = nx.spring_layout(H, k=1/math.sqrt(HN), seed=42)\n",
+        "max_in_H = max((in_deg.get(n,0) for n in H.nodes()), default=1)\n",
+        "node_sizes_H = [120 + (480 * (in_deg.get(n,0) / max_in_H if max_in_H else 0)) for n in H.nodes()]\n",
+        "node_colors_H = ['tab:orange' for _ in H.nodes()]\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.figure(figsize=(10, 8), dpi=150)\n",
+        "nx.draw_networkx_edges(H, posH, arrows=False, width=0.6, alpha=0.35)\n",
+        "nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors='#444444')\n",
+        "if H.number_of_nodes() <= 60:\n",
+        "    nx.draw_networkx_labels(H, posH, font_size=6)\n",
+        "plt.title('NPM Top N Bağımlılık Ağı (Sadece Top N)')\n",
+        "plt.axis('off')\n",
+        "out_png2 = OUTDIR / 'network_topN_only.png'\n",
+        "out_svg2 = OUTDIR / 'network_topN_only.svg'\n",
+        "plt.tight_layout(); plt.savefig(out_png2); plt.savefig(out_svg2)\n",
+        "(out_png2, out_svg2)\n"
       ]
     },
     {
@@ -555,58 +547,55 @@
         }
       ],
       "source": [
-        "try:\n",
-        "    import matplotlib.pyplot as plt\n",
-        "    # In-Degree ilk 10 (tüm düğümler)\n",
-        "    top10_in = sorted(in_deg.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
-        "    names_in = [n for n,_ in top10_in][::-1]\n",
-        "    vals_in = [v for _,v in top10_in][::-1]\n",
+        "import matplotlib.pyplot as plt\n",
+        "# In-Degree ilk 10 (tüm düğümler)\n",
+        "top10_in = sorted(in_deg.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
+        "names_in = [n for n,_ in top10_in][::-1]\n",
+        "vals_in = [v for _,v in top10_in][::-1]\n",
         "\n",
-        "    # Out-Degree ilk 10 (tüm düğümler)\n",
-        "    top10_out = sorted(out_deg.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
-        "    names_out = [n for n,_ in top10_out][::-1]\n",
-        "    vals_out = [v for _,v in top10_out][::-1]\n",
+        "# Out-Degree ilk 10 (tüm düğümler)\n",
+        "top10_out = sorted(out_deg.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
+        "names_out = [n for n,_ in top10_out][::-1]\n",
+        "vals_out = [v for _,v in top10_out][::-1]\n",
         "\n",
-        "    # Betweenness ilk 10 (tüm düğümler)\n",
-        "    top10_btw = sorted(btw.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
-        "    names_btw = [n for n,_ in top10_btw][::-1]\n",
-        "    vals_btw = [v for _,v in top10_btw][::-1]\n",
+        "# Betweenness ilk 10 (tüm düğümler)\n",
+        "top10_btw = sorted(btw.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
+        "names_btw = [n for n,_ in top10_btw][::-1]\n",
+        "vals_btw = [v for _,v in top10_btw][::-1]\n",
         "\n",
-        "    fig, axes = plt.subplots(1, 3, figsize=(20, 6), dpi=150)\n",
-        "    # In-Degree grafiği\n",
-        "    axes[0].barh(names_in, vals_in, color='tab:blue')\n",
-        "    axes[0].set_title('In-Degree İlk 10')\n",
-        "    axes[0].set_xlabel('In-Degree')\n",
-        "    axes[0].tick_params(axis='y', labelsize=8)\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(20, 6), dpi=150)\n",
+        "# In-Degree grafiği\n",
+        "axes[0].barh(names_in, vals_in, color='tab:blue')\n",
+        "axes[0].set_title('In-Degree İlk 10')\n",
+        "axes[0].set_xlabel('In-Degree')\n",
+        "axes[0].tick_params(axis='y', labelsize=8)\n",
         "\n",
-        "    # Out-Degree grafiği\n",
-        "    axes[1].barh(names_out, vals_out, color='tab:green')\n",
-        "    axes[1].set_title('Out-Degree İlk 10')\n",
-        "    axes[1].set_xlabel('Out-Degree')\n",
-        "    axes[1].tick_params(axis='y', labelsize=8)\n",
+        "# Out-Degree grafiği\n",
+        "axes[1].barh(names_out, vals_out, color='tab:green')\n",
+        "axes[1].set_title('Out-Degree İlk 10')\n",
+        "axes[1].set_xlabel('Out-Degree')\n",
+        "axes[1].tick_params(axis='y', labelsize=8)\n",
         "\n",
-        "    # Betweenness grafiği\n",
-        "    axes[2].barh(names_btw, vals_btw, color='tab:orange')\n",
-        "    axes[2].set_title('Betweenness İlk 10')\n",
-        "    axes[2].set_xlabel('Betweenness')\n",
-        "    axes[2].tick_params(axis='y', labelsize=8)\n",
+        "# Betweenness grafiği\n",
+        "axes[2].barh(names_btw, vals_btw, color='tab:orange')\n",
+        "axes[2].set_title('Betweenness İlk 10')\n",
+        "axes[2].set_xlabel('Betweenness')\n",
+        "axes[2].tick_params(axis='y', labelsize=8)\n",
         "\n",
-        "    plt.tight_layout()\n",
-        "    out_combo = OUTDIR / 'top10_leaders.png'\n",
-        "    out_combo_svg = OUTDIR / 'top10_leaders.svg'\n",
-        "    plt.savefig(out_combo)\n",
-        "    plt.savefig(out_combo_svg)\n",
-        "    print(out_combo)\n",
+        "plt.tight_layout()\n",
+        "out_combo = OUTDIR / 'top10_leaders.png'\n",
+        "out_combo_svg = OUTDIR / 'top10_leaders.svg'\n",
+        "plt.savefig(out_combo)\n",
+        "plt.savefig(out_combo_svg)\n",
+        "print(out_combo)\n",
         "\n",
-        "    # Ayrı ayrı da kaydedelim\n",
-        "    plt.figure(figsize=(8,6), dpi=150); plt.barh(names_in, vals_in, color='tab:blue'); plt.title('In-Degree İlk 10'); plt.xlabel('In-Degree'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_in_degree.png')\n",
-        "    plt.savefig(OUTDIR / 'top10_in_degree.svg')\n",
-        "    plt.figure(figsize=(8,6), dpi=150); plt.barh(names_out, vals_out, color='tab:green'); plt.title('Out-Degree İlk 10'); plt.xlabel('Out-Degree'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_out_degree.png')\n",
-        "    plt.savefig(OUTDIR / 'top10_out_degree.svg')\n",
-        "    plt.figure(figsize=(8,6), dpi=150); plt.barh(names_btw, vals_btw, color='tab:orange'); plt.title('Betweenness İlk 10'); plt.xlabel('Betweenness'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_betweenness.png')\n",
-        "    plt.savefig(OUTDIR / 'top10_betweenness.svg')\n",
-        "except ModuleNotFoundError:\n",
-        "    print('matplotlib bulunamadı; görselleştirme atlandı.')"
+        "# Ayrı ayrı da kaydedelim\n",
+        "plt.figure(figsize=(8,6), dpi=150); plt.barh(names_in, vals_in, color='tab:blue'); plt.title('In-Degree İlk 10'); plt.xlabel('In-Degree'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_in_degree.png')\n",
+        "plt.savefig(OUTDIR / 'top10_in_degree.svg')\n",
+        "plt.figure(figsize=(8,6), dpi=150); plt.barh(names_out, vals_out, color='tab:green'); plt.title('Out-Degree İlk 10'); plt.xlabel('Out-Degree'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_out_degree.png')\n",
+        "plt.savefig(OUTDIR / 'top10_out_degree.svg')\n",
+        "plt.figure(figsize=(8,6), dpi=150); plt.barh(names_btw, vals_btw, color='tab:orange'); plt.title('Betweenness İlk 10'); plt.xlabel('Betweenness'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_betweenness.png')\n",
+        "plt.savefig(OUTDIR / 'top10_betweenness.svg')\n"
       ]
     },
     {
@@ -637,23 +626,20 @@
         }
       ],
       "source": [
-        "try:\n",
-        "    import matplotlib.pyplot as plt\n",
-        "    import numpy as np\n",
-        "    indeg_vals = np.array(list(in_deg.values()))\n",
-        "    outdeg_vals = np.array(list(out_deg.values()))\n",
-        "    fig, ax = plt.subplots(1,2, figsize=(12,4), dpi=150)\n",
-        "    ax[0].hist(indeg_vals, bins=30, color='tab:blue', alpha=0.8)\n",
-        "    ax[0].set_title('In-Degree Dağılımı'); ax[0].set_yscale('log')\n",
-        "    ax[0].set_xlabel('In-Degree'); ax[0].set_ylabel('Frekans')\n",
-        "    ax[1].hist(outdeg_vals, bins=30, color='tab:green', alpha=0.8)\n",
-        "    ax[1].set_title('Out-Degree Dağılımı'); ax[1].set_yscale('log')\n",
-        "    ax[1].set_xlabel('Out-Degree'); ax[1].set_ylabel('Frekans')\n",
-        "    plt.tight_layout()\n",
-        "    plt.savefig(OUTDIR / 'degree_histograms.png')\n",
-        "    plt.savefig(OUTDIR / 'degree_histograms.svg')\n",
-        "except ModuleNotFoundError:\n",
-        "    print('matplotlib bulunamadı; görselleştirme atlandı.')"
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "indeg_vals = np.array(list(in_deg.values()))\n",
+        "outdeg_vals = np.array(list(out_deg.values()))\n",
+        "fig, ax = plt.subplots(1,2, figsize=(12,4), dpi=150)\n",
+        "ax[0].hist(indeg_vals, bins=30, color='tab:blue', alpha=0.8)\n",
+        "ax[0].set_title('In-Degree Dağılımı'); ax[0].set_yscale('log')\n",
+        "ax[0].set_xlabel('In-Degree'); ax[0].set_ylabel('Frekans')\n",
+        "ax[1].hist(outdeg_vals, bins=30, color='tab:green', alpha=0.8)\n",
+        "ax[1].set_title('Out-Degree Dağılımı'); ax[1].set_yscale('log')\n",
+        "ax[1].set_xlabel('Out-Degree'); ax[1].set_ylabel('Frekans')\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(OUTDIR / 'degree_histograms.png')\n",
+        "plt.savefig(OUTDIR / 'degree_histograms.svg')\n"
       ]
     },
     {
@@ -684,25 +670,22 @@
         }
       ],
       "source": [
-        "try:\n",
-        "    import matplotlib.pyplot as plt\n",
-        "    import numpy as np\n",
-        "    nodes_list = list(G.nodes())\n",
-        "    x_in = np.array([in_deg.get(n,0) for n in nodes_list])\n",
-        "    y_btw = np.array([btw.get(n,0.0) for n in nodes_list])\n",
-        "    y_out = np.array([out_deg.get(n,0) for n in nodes_list])\n",
-        "    fig, ax = plt.subplots(1,2, figsize=(12,4), dpi=150)\n",
-        "    ax[0].scatter(x_in, y_btw, s=10, alpha=0.6, color='tab:orange')\n",
-        "    ax[0].set_title('In-Degree vs Betweenness')\n",
-        "    ax[0].set_xlabel('In-Degree'); ax[0].set_ylabel('Betweenness')\n",
-        "    ax[1].scatter(x_in, y_out, s=10, alpha=0.6, color='tab:green')\n",
-        "    ax[1].set_title('In-Degree vs Out-Degree')\n",
-        "    ax[1].set_xlabel('In-Degree'); ax[1].set_ylabel('Out-Degree')\n",
-        "    plt.tight_layout()\n",
-        "    plt.savefig(OUTDIR / 'scatter_correlations.png')\n",
-        "    plt.savefig(OUTDIR / 'scatter_correlations.svg')\n",
-        "except ModuleNotFoundError:\n",
-        "    print('matplotlib bulunamadı; görselleştirme atlandı.')"
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "nodes_list = list(G.nodes())\n",
+        "x_in = np.array([in_deg.get(n,0) for n in nodes_list])\n",
+        "y_btw = np.array([btw.get(n,0.0) for n in nodes_list])\n",
+        "y_out = np.array([out_deg.get(n,0) for n in nodes_list])\n",
+        "fig, ax = plt.subplots(1,2, figsize=(12,4), dpi=150)\n",
+        "ax[0].scatter(x_in, y_btw, s=10, alpha=0.6, color='tab:orange')\n",
+        "ax[0].set_title('In-Degree vs Betweenness')\n",
+        "ax[0].set_xlabel('In-Degree'); ax[0].set_ylabel('Betweenness')\n",
+        "ax[1].scatter(x_in, y_out, s=10, alpha=0.6, color='tab:green')\n",
+        "ax[1].set_title('In-Degree vs Out-Degree')\n",
+        "ax[1].set_xlabel('In-Degree'); ax[1].set_ylabel('Out-Degree')\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(OUTDIR / 'scatter_correlations.png')\n",
+        "plt.savefig(OUTDIR / 'scatter_correlations.svg')\n"
       ]
     },
     {
