Notebook optimize: gereksiz import/tekrarlar temizlendi; açıklamalar detaylandırıldı; başlıklar güçlendirildi ve Top N genelleştirildi

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5,22 +5,22 @@
       "id": "8567c601",
       "metadata": {},
       "source": [
-        "# NPM Kompleks Ağ Analizi (Top N)\n",
-        "\n",
-        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree / out-degree / betweenness merkeziyet metrikleriyle yapısal riski inceler.\n",
-        "\n",
-        "Amaç:\n",
-        "- Bağımlılık ağındaki konuma dayalı kritik düğümleri belirlemek\n",
-        "- Zincirleme etki potansiyelini (cascading impact) nicel olarak görmek\n",
-        "- Sonuçları tekrar üretilebilir şekilde görselleştirmek ve raporlamak\n",
-        "\n",
-        "Metodoloji (özet):\n",
-        "- Veri: Liste her çalıştırmada API’lerden çekilir (ecosyste.ms / npm registry / npms.io yedekli)\n",
-        "- Ağ: NetworkX DiGraph (kenar: Dependent → Dependency)\n",
-        "- Metrikler: In-Degree (gelen), Out-Degree (giden), Betweenness\n",
-        "- Performans: Büyük graf’larda betweenness için örneklemeli hesap\n",
-        "- Çıktılar: Tüm sonuçlar `results/` klasörüne yazılır (CSV/MD/JSON + PNG/SVG)\n",
-        "\n",
+        "# NPM Kompleks Ağ Analizi (Top N)",
+        "",
+        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree / out-degree / betweenness merkeziyet metrikleriyle yapısal riski inceler.",
+        "",
+        "**Amaç**",
+        "- Bağımlılık ağındaki konuma dayalı kritik düğümleri belirlemek",
+        "- Zincirleme etki (cascading impact) potansiyelini nicel görmek",
+        "- Sonuçları yineleyebilir şekilde görselleştirmek ve raporlamak",
+        "",
+        "**Yöntem**",
+        "- Veri: Liste her çalıştırmada API’lerden çekilir (ecosyste.ms / npm registry / npms.io yedekli).",
+        "- Ağ Modeli: NetworkX DiGraph; kenar yönü Dependent → Dependency (bağımlı paket → bağımlılık).",
+        "- Metrikler: In-Degree (gelen), Out-Degree (giden), Betweenness (köprü rol).",
+        "- Performans: Büyük graf’larda betweenness yaklaşık örnekleme ile hızlandırılır.",
+        "- Çıktılar: Tüm sonuçlar `results/` klasörüne kaydedilir (CSV/MD/JSON + PNG/SVG).",
+        "",
         "Varsayılan Top N = 1000 (değiştirilebilir)."
       ]
     },
@@ -48,13 +48,11 @@
         "\n",
         "# Matplotlib kontrol/kurulum (gerekirse)\n",
         "import matplotlib  # noqa: F401\n",
-        "import matplotlib.pyplot as plt  # noqa: F401\n",
         "print('matplotlib hazır')\n",
         "import subprocess\n",
         "print('matplotlib eksik; kuruluyor...')\n",
         "subprocess.check_call([sys.executable, '-m', 'pip', 'install', 'matplotlib'])\n",
         "import matplotlib  # noqa: F401\n",
-        "import matplotlib.pyplot as plt  # noqa: F401\n",
         "print('kurulum tamam')\n",
         "\n",
         "import networkx as nx\n",
@@ -79,9 +77,9 @@
       "id": "55d98b52",
       "metadata": {},
       "source": [
-        "## 2) Top N Paketleri Yükle\n",
-        "\n",
-        "Liste her çalıştırmada API’lerden çekilir (indirme sayısına göre sıralı)."
+        "## 2) Top N Paketleri Yükle",
+        "",
+        "Liste, indirilmeye göre sıralı şekilde API’lerden çekilir. Öncelik ecosyste.ms; gerekirse npm registry / npms.io yedekleri kullanılır. Bu yaklaşım sabit dosyaya bağımlılığı kaldırır ve güncel popülerliği yansıtır."
       ]
     },
     {
@@ -101,9 +99,9 @@
       "id": "38ec8e56",
       "metadata": {},
       "source": [
-        "## 3) Yönlü Ağı Kur\n",
-        "\n",
-        "Düğümler paketler; kenarlar Dependent → Dependency. Varsayılan olarak yalnızca `dependencies` kullanılır."
+        "## 3) Yönlü Ağı Kur",
+        "",
+        "Kenar yönü Dependent → Dependency (paket → kullandığı bağımlılık). Bu yön, bir paketin ele geçirilmesi halinde etki akışını (bağımlıdan bağımlılığa) analiz etmeyi kolaylaştırır."
       ]
     },
     {
@@ -122,17 +120,13 @@
       "id": "58466719",
       "metadata": {},
       "source": [
-        "## 4) Merkeziyet Metrikleri\n",
-        "\n",
-        "- In-Degree: Düğüme gelen kenar → etkilenebilecek alan\n",
-        "\n",
-        "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu\n",
-        "\n",
-        "- Betweenness: En kısa yollardaki aracılık → tek hata noktası riski\n",
-        "\n",
-        "\n",
-        "\n",
-        "Not: Büyük graf’larda betweenness yaklaşık örnekleme (k) ile hızlandırılır."
+        "## 4) Merkeziyet Metrikleri",
+        "",
+        "- In-Degree: Düğüme gelen kenar (bu pakete dayanan paket sayısı) → ele geçirilirse etki alanı.",
+        "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu/karmaşıklığı.",
+        "- Betweenness: En kısa yollardaki aracılık → köprü/tek hata noktası riski.",
+        "",
+        "Not: Büyük graf’larda betweenness örneklemeli (k) hesaplanır; notebook ilk hücrede `SAMPLE_K` ile ayarlanabilir."
       ]
     },
     {
@@ -152,8 +146,8 @@
       "id": "2d3995db",
       "metadata": {},
       "source": [
-        "## 5) Liderler: İlk 10 (Özet + Görselleştirme)\n",
-        "Bu adımda in-degree / out-degree / betweenness için ilk 10’u hem metin olarak özetler hem de bar grafikleri PNG+SVG olarak results/ klasörüne kaydeder."
+        "## 5) Liderler: İlk 10 (Özet + Görselleştirme)",
+        "In/Out-Degree ve Betweenness için ilk 10 düğümü hem metin hem grafik olarak sunar. Bu listeler ağın yapısal omurgasını ve kritik köprü düğümlerini öne çıkarır."
       ]
     },
     {
@@ -175,9 +169,8 @@
       "id": "0fbc6256",
       "metadata": {},
       "source": [
-        "## 6) Sonuçları Kaydet\n",
-        "\n",
-        "Kenarlar, metrikler ve kısa rapor `results/` altına yazılır."
+        "## 6) Sonuçları Kaydet",
+        "Kenarlıklar, merkeziyet metrikleri ve kısa rapor dosyaya yazılır. Böylece defter dışı analiz ve kıyaslamalara zemin hazırlanır."
       ]
     },
     {
@@ -199,9 +192,8 @@
       "id": "ae03b462",
       "metadata": {},
       "source": [
-        "## 7) Hızlı Doğrulama\n",
-        "\n",
-        "Rastgele bazı paketler için registry’deki `dependencies` ile graf kenarlarını karşılaştıralım. Küçük farklar sürüm farklılıklarından kaynaklanabilir."
+        "## 7) Hızlı Doğrulama",
+        "Rastgele paketler için registry bağımlılıkları ile graf kenarlarını karşılaştırır. Küçük farklar sürüm farklılıkları ve metadata gecikmelerinden kaynaklanabilir."
       ]
     },
     {
@@ -241,9 +233,8 @@
       "id": "e913f0ca",
       "metadata": {},
       "source": [
-        "## 8) Tüm Ağ Çizimi (Top N + Bağımlılıklar)\n",
-        "\n",
-        "Top N düğümleri turuncu, diğerleri mavi; düğüm boyutu in-degree ile ölçeklenir."
+        "## 8) Tüm Ağ Çizimi (Top N + Bağımlılıklar)",
+        "Top N düğümler turuncu, diğerleri mavi; düğüm boyutu in-degree ile ölçeklenir. Ağın genel topolojisi ve yıldız/omurga yapıları gözlemlenir."
       ]
     },
     {
@@ -254,7 +245,6 @@
       "outputs": [],
       "source": [
         "import math\n",
-        "import matplotlib.pyplot as plt\n",
         "N = G.number_of_nodes()\n",
         "pos = nx.spring_layout(G, k=1/math.sqrt(max(N,1)), seed=42)\n",
         "max_in = max(in_deg.values()) if in_deg else 1\n",
@@ -276,9 +266,8 @@
       "id": "ce54238c",
       "metadata": {},
       "source": [
-        "## 9) Sadece Top N (İndüklenmiş Alt-Ağ)\n",
-        "\n",
-        "Sadece Top N düğümleri; düğüm sayısı azsa etiketleri göster."
+        "## 9) Sadece Top N (İndüklenmiş Alt-Ağ)",
+        "Sadece Top N düğümlerin oluşturduğu alt-ağ; etiketler az düğüm olduğunda gösterilir. Kohort içi yapısal ilişkiler netleşir."
       ]
     },
     {
@@ -294,7 +283,6 @@
         "max_in_H = max((in_deg.get(n,0) for n in H.nodes()), default=1)\n",
         "node_sizes_H = [120 + (480 * (in_deg.get(n,0) / max_in_H if max_in_H else 0)) for n in H.nodes()]\n",
         "node_colors_H = ['tab:orange' for _ in H.nodes()]\n",
-        "import matplotlib.pyplot as plt\n",
         "plt.figure(figsize=(10, 8), dpi=150)\n",
         "nx.draw_networkx_edges(H, posH, arrows=False, width=0.6, alpha=0.35)\n",
         "nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors='#444444')\n",
@@ -313,15 +301,8 @@
       "id": "aeef7ca6",
       "metadata": {},
       "source": [
-        "## 14) Varsayımlar ve Sınırlamalar\n",
-        "\n",
-        "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.\n",
-        "\n",
-        "- Varsayılan olarak yalnızca `dependencies` dahil; `peerDependencies` talebe göre eklenebilir.\n",
-        "\n",
-        "- Küresel dependent sayıları dahil değildir; ecosyste.ms’ten eklenebilir.\n",
-        "\n",
-        "- En güncel sürüm kullanılır; eski sürümlerde bağımlılıklar farklı olabilir."
+        "## 14) Varsayımlar ve Sınırlamalar",
+        "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.\n- Varsayılan olarak yalnız `dependencies` dahil; `peerDependencies` isteğe bağlı eklenebilir.\n- Global dependent sayıları dahil değildir; ecosyste.ms verisi eklenebilir.\n- En güncel sürüm kullanılır; eski sürümlerde bağımlılıklar farklı olabilir."
       ]
     },
     {
@@ -331,7 +312,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\n",
         "# In-Degree ilk 10 (tüm düğümler)\n",
         "top10_in = sorted(in_deg.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
         "names_in = [n for n,_ in top10_in][::-1]\n",
@@ -387,9 +367,8 @@
       "id": "01795e98",
       "metadata": {},
       "source": [
-        "## 10) Derece Dağılımları (Histogram)\n",
-        "\n",
-        "In-degree ve out-degree dağılımlarını inceleyelim (log ölçek)."
+        "## 10) Derece Dağılımları (Histogram)",
+        "In-degree ve out-degree dağılımları (log ölçek). Kuyruk davranışı ve yoğunlaşmalar görülür."
       ]
     },
     {
@@ -399,7 +378,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "indeg_vals = np.array(list(in_deg.values()))\n",
         "outdeg_vals = np.array(list(out_deg.values()))\n",
@@ -420,9 +398,8 @@
       "id": "81a79980",
       "metadata": {},
       "source": [
-        "## 11) Korelasyonlar (Dağılım Grafikleri)\n",
-        "\n",
-        "In-degree vs Betweenness ve In-degree vs Out-degree."
+        "## 11) Korelasyonlar (Dağılım Grafikleri)",
+        "In-Degree vs Betweenness ve In-Degree vs Out-Degree ilişkileri; köprü düğümlerin derecesi ve dış bağımlılıklarının etkisi."
       ]
     },
     {
@@ -432,7 +409,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "nodes_list = list(G.nodes())\n",
         "x_in = np.array([in_deg.get(n,0) for n in nodes_list])\n",
@@ -455,9 +431,8 @@
       "id": "cd947cca",
       "metadata": {},
       "source": [
-        "## 12) Bağlanırlık ve Bileşenler\n",
-        "\n",
-        "Zayıf bağlanırlık bileşenleri ve temel ağ istatistikleri."
+        "## 12) Bağlanırlık ve Bileşenler",
+        "Zayıf bağlanırlık bileşen sayısı, en büyük bileşen boyutu ve ortalama dereceler. Ağın parçalanabilirliği hakkında sezgi verir."
       ]
     },
     {
@@ -489,9 +464,8 @@
       "id": "106b32f1",
       "metadata": {},
       "source": [
-        "## 13) Köprü Kenarlar (Edge Betweenness)\n",
-        "\n",
-        "En yüksek edge betweenness değerine sahip 10 kenarı çıkaralım."
+        "## 13) Köprü Kenarlar (Edge Betweenness)",
+        "Edge betweenness’a göre en kritik 10 kenar. Bu kenarların kopması, alt-ağların ayrışmasına yol açabilir."
       ]
     },
     {
