Geliştirme: peerDependencies opsiyonu, bileşik risk skoru (CSV+grafik), risk tabanlı robustluk analizi (JSON); notebook parametreleri ve adımları eklendi

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -66,6 +66,8 @@
         ")\n",
         "\n",
         "TOP_N = 1000  # Top N paket (varsayılan)\n",
+        "INCLUDE_PEER_DEPS = False  # peerDependencies'i eklemek icin True yapin",
+        "RISK_WEIGHTS = (0.5, 0.2, 0.3)  # (w_in, w_out, w_btw)",
         "SAMPLE_K = None  # Betweenness örnekleme (None=tahmine dayalı)",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
@@ -111,7 +113,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "G, top_set = build_dependency_graph(top_packages, cache_path=OUTDIR / 'cache_deps.json')\n",
+        "G, top_set = build_dependency_graph(top_packages, cache_path=OUTDIR / 'cache_deps.json', include_peer_deps=INCLUDE_PEER_DEPS)\n",
         "G.number_of_nodes(), G.number_of_edges()"
       ]
     },
@@ -483,6 +485,59 @@
         "    w = csv.writer(f); w.writerow(['u','v','edge_betweenness'])\n",
         "    [w.writerow([u,v, f'{val:.6f}']) for (u,v), val in top_edges]\n",
         "top_edges"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 13) Risk Skoru (Bileşik)",
+        "Normalize in/out/between ile ağırlıklı (w_in,w_out,w_btw) risk skoru. İlk 20’yi dışa aktaralım ve görselleştirelim."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "source": [
+        "from analysis_helpers import compute_risk_scores, save_risk_scores",
+        "risk = compute_risk_scores(in_deg, out_deg, btw, *RISK_WEIGHTS)",
+        "save_risk_scores(risk, in_deg, out_deg, btw, top_set, OUTDIR / 'risk_scores.csv')",
+        "# İlk 20 risk liderini görselleştir (PNG+SVG)",
+        "top20 = sorted(risk.items(), key=lambda kv: kv[1], reverse=True)[:20]",
+        "names = [n for n,_ in top20][::-1]; vals=[v for _,v in top20][::-1]",
+        "import matplotlib.pyplot as plt",
+        "plt.figure(figsize=(8,8), dpi=150); plt.barh(names, vals, color='tab:red'); plt.title('Risk Skoru İlk 20'); plt.xlabel('Risk'); plt.tight_layout();",
+        "plt.savefig(OUTDIR / 'top20_risk.png'); plt.savefig(OUTDIR / 'top20_risk.svg')",
+        "(len(risk), len(top20))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 14) Robustluk Analizi (Risk Tabanlı Kaldırma)",
+        "Risk skoruna göre ilk 1/3/5 düğümü kaldırınca bağlanırlık nasıl değişiyor?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "source": [
+        "import json",
+        "from analysis_helpers import robustness_remove_and_stats",
+        "ranked = [n for n,_ in sorted(risk.items(), key=lambda kv: kv[1], reverse=True)]",
+        "ks = [1,3,5]",
+        "results = {}",
+        "for k in ks:",
+        "    removed = ranked[:k]",
+        "    stats = robustness_remove_and_stats(G, removed)",
+        "    results[str(k)] = {\"removed\": removed, \"stats\": stats}",
+        "(OUTDIR / 'robustness_risk.json').write_text(json.dumps(results, ensure_ascii=False, indent=2), encoding='utf-8')",
+        "results"
       ]
     }
   ],
